# rocket_blog

./: Cargo.toml  index.html
src/: main.rs
static/: home.css  w3.css
templates/: home.html.tera
