[package]
name = "rocket_blog_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json", "uuid", "tls", "secrets"]}
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
serde = {version = "1.0.152", features = ["derive"]}
rocket_sync_db_pools = { version = "0.1.0-rc.2", features = ["sqlite_pool"]}
